# Iris-Lite-Cuda

./: .gitignore  CMakeLists.txt  README.md  cuda_helpers.cu  main.cu
config/: camera_config.cu  camera_config.h  camera_invariants.h
docs/: data_contract.md
projection/: projection.cu  projection.h
